[tool.poetry]
name = "qaes"
version = "0.1.0"
description = ""
authors = ["Mohammad Jafari <m.jafari9877@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pycrypto = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
